fix main page es01 and some group

--- a/es1/g2_keep-it-safe/index.html
+++ b/es1/g2_keep-it-safe/index.html
@@ -28,7 +28,7 @@
     <meta name="author" content="Carola Barnaba, Maddalena Bernasconi, Chiara Bonsignore. Giada Casella, Eyleen Carolina Camargo, Carlo Colombo">
 	<meta property="og:image" content="http://labs.densitydesign.org/dd11/es1/g2_keep-it-safe/cover.png"/>
 	<meta property="og:description" content="A representative vision of nutrition's (in)securities"/>
-    
+
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@densitydesign">
 	<meta name="twitter:title" content="Keep (eat) safe">
@@ -47,7 +47,7 @@
     <link href="assets/css/animate.min.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,900,300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900,300,700" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,700italic|Podkova' rel='stylesheet' type='text/css'>
 
     <!-- Icons/Glyphs -->
@@ -243,13 +243,13 @@
                                     Western Asia<br>
                                     Eastern Africa<br>
                                     Western Africa<br>
-                                    Central Asia<br> 
+                                    Central Asia<br>
                                     Southern Africa<br>
                                     Caribbean<br>
                                     Middle Africa<br>
-                                    Melanesia<br> 
-                                    Micronesia and Polynesia 
-                                    </p>   
+                                    Melanesia<br>
+                                    Micronesia and Polynesia
+                                    </p>
                                 </div>
                                 -->
                             <div class="col-md-1">
