--- a/es2/g5_openaccess/introduction.html
+++ b/es2/g5_openaccess/introduction.html
@@ -23,7 +23,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Fontawesome -->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
