--- a/es2/g4_migration_images/introduction.html
+++ b/es2/g4_migration_images/introduction.html
@@ -285,7 +285,7 @@
     <script src="js/sidemenu.js"></script>
 
     <!-- Custom Javascript -->
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
